--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -106,7 +106,7 @@
     width: 460px;
     padding: 15px;
 }
-button{
+.bnt{
     background-color:rgb(211, 211, 230) ;
     border-style: none;
     
